--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>[求职]hack-hu-Java开发工程师</title>
+    <title>[求职]汪皓-前端工程师</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet"  type="text/css" href="assets/css/typo.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
@@ -357,10 +357,10 @@
     <aside>
         <ul>
             <li>
-                <a href="https://github.com/hackhu2019" target="_blank">Github</a>
+                <a href="https://github.com/wanghaozz1/" target="_blank">Github</a>
             </li>
             <li>
-                <a href="https://blog.csdn.net/qq_38288847" target="_blank">Blog</a>
+                <a href="https://wanghaozz1.github.io/myblog/" target="_blank">Blog</a>
             </li>
         </ul>
     </aside>
